--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,67 @@
 <resources>
+    <!-- App -->
     <string name="app_name">Rustic Price Convertor</string>
-    <string name="searchCurrency">Поиск валюты</string>
-    <string name="chooseCurrencies">ВЫБРАТЬ ВАЛЮТЫ</string>
-    <string name="priceInput">Цена</string>
-    <string name="quantityInput">Количество</string>
-    <string name="priceFerType">Цена указана за:</string>
-    <string name="totalPricePerUnit">Цена за штуку: -</string>
-    <string name="totalUnitsQuantity">Количество штук: -</string>
-    <string name="convertedTotalPricePerUnit">Конвертированная стоимость за штуку: —</string>
-    <string name="convertedTotalPrice">Конвертированная итоговая стоимость: —</string>
-    <string name="pricePerSpecialType">Цена за …: -</string>
-    <string name="quantityPerType">Взято (вес/объём): -</string>
-    <string name="pricePerOneByType">Стоимость за 1 кг / 1 г / 1 л: -</string>
-    <string name="convertedTotalPricePerUnitByType">Конвертированная стоимость за кг/г/л: —</string>
-    <string name="convertedTotalPricePerType">Конвертированная стоимость за 1 кг / 100 г / 1 л: —</string>
-    <string name="currencySelected">selected</string>
-    <string name="favoriteToggle">favorite toggle</string>
+
+    <!-- Общие/кнопки/диалоги -->
+    <string name="search_currency">Поиск валюты</string>
+    <string name="choose_currencies">ВЫБРАТЬ ВАЛЮТЫ</string>
+    <string name="btn_close">Закрыть</string>
+    <string name="btn_ok">OK</string>
+
+    <!-- Поля ввода -->
+    <string name="price_input">Цена</string>
+    <string name="quantity_input">Количество</string>
     <string name="count">Число</string>
-    <string name="priceFor">"Цена за </string>
+    <string name="price_for_label">Цена указана за:</string>
+
+    <!-- Подсказки -->
+    <string name="hint_amount_for_price_weight">сколько г/кг указано в цене</string>
+    <string name="hint_amount_for_price_volume">сколько мл/л указано в цене</string>
+    <string name="hint_qty_pieces">Количество штук</string>
+    <string name="hint_qty_kg">Вес, кг</string>
+    <string name="hint_qty_g">Вес, г</string>
+    <string name="hint_qty_l">Объём, л</string>
+    <string name="hint_qty_ml">Объём, мл</string>
+
+    <!-- Диалоги выбора валют -->
+    <string name="title_base_currency">Основная валюта</string>
+    <string name="title_secondary_currencies">Валюты для конвертации (мин. 1, макс. 5)</string>
+    <string name="section_current">Текущая</string>
+    <string name="section_selected">Текущие</string>
+    <string name="section_recent">Последние</string>
+    <string name="section_favorites">Избранные</string>
+    <string name="section_others">Остальные</string>
+
+    <!-- Тосты/ошибки -->
+    <string name="err_load_currencies">Не удалось загрузить список валют</string>
+    <string name="err_fetch_rates">Не удалось получить курсы для %1$s</string>
+    <string name="warn_need_at_least_one">Нужно выбрать хотя бы одну валюту</string>
+
+    <!-- Штучный товар -->
+    <string name="piece_price">Цена за штуку: %1$.2f %2$s</string>
+    <string name="piece_count">Количество штук: %1$d</string>
+    <string name="converted_per_piece_title">Конвертированная стоимость за штуку:</string>
+    <string name="converted_total_title">Конвертированная итоговая стоимость:</string>
+
+    <!-- Вес/объём -->
+    <string name="price_for">Цена за </string>
+    <string name="price_per_any_format">%1$s: %2$.2f %3$s</string>
+    <string name="taken_generic">Взято (%1$s): %2$s</string>
+    <string name="cost_per_kg_and_100g">Стоимость за 1 кг / 100 г: %1$.2f / %2$.2f %3$s</string>
+    <string name="cost_per_l_and_100ml">Стоимость за 1 л / 100 мл:
+%1$.2f / %2$.2f %3$s</string>
+
+    <string name="converted_per_kg_title">Конвертированная стоимость за 1 кг:</string>
+    <string name="converted_per_100g_title">Конвертированная стоимость за 100 г:</string>
+    <string name="converted_per_l_title">Конвертированная стоимость за 1 л:</string>
+    <string name="converted_per_100ml_title">Конвертированная стоимость за 100 мл:</string>
+    <string name="converted_total_weight_title">Конвертированная итоговая стоимость:</string>
+
+    <!-- Пустые состояния -->
+    <string name="dash_price">Цена за —: —</string>
+    <string name="dash">—</string>
+
+    <!-- A11y -->
+    <string name="currency_selected">selected</string>
+    <string name="favorite_toggle">favorite toggle</string>
 </resources>
