--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Общие/кнопки/диалоги -->
     <string name="search_currency">Поиск валюты</string>
-    <string name="choose_currencies">ВЫБРАТЬ ВАЛЮТЫ</string>
+    <string name="choose_currencies">ВАЛЮТЫ</string>
     <string name="btn_close">Закрыть</string>
     <string name="btn_ok">OK</string>
 
@@ -61,7 +61,40 @@
     <string name="dash_price">Цена за —: —</string>
     <string name="dash">—</string>
 
+    <!-- Языки -->
+    <string name="language_ru">Русский</string>
+    <string name="language_uk">Українська</string>
+    <string name="language_en">English</string>
+    <string name="language_ro">Română</string>
+
     <!-- A11y -->
-    <string name="currency_selected">selected</string>
-    <string name="favorite_toggle">favorite toggle</string>
+    <string name="currency_selected">Выбранные</string>
+    <string name="favorite_toggle">Переключение избранного</string>
+
+    <string name="unit_piece">шт.</string>
+    <string name="unit_kg">кг</string>
+    <string name="unit_g">г</string>
+    <string name="unit_l">л</string>
+    <string name="unit_ml">мл</string>
+
+    <string-array name="units_main">
+        <item>@string/unit_piece</item>
+        <item>@string/unit_kg</item>
+        <item>@string/unit_g</item>
+        <item>@string/unit_l</item>
+        <item>@string/unit_ml</item>
+    </string-array>
+
+    <string-array name="units_mass">
+        <item>@string/unit_g</item>
+        <item>@string/unit_kg</item>
+    </string-array>
+
+    <string-array name="units_volume">
+        <item>@string/unit_ml</item>
+        <item>@string/unit_l</item>
+    </string-array>
+
+    <string name="price_amount_hint_volume">сколько мл/л указано в цене</string>
+    <string name="price_amount_hint_mass">сколько г/кг указано в цене</string>
 </resources>
