--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,73 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Rustic Price Convertor</string>
+    <string name="app_name">Rustic Price Converter</string>
     <string name="search_currency">Search currency</string>
     <string name="choose_currencies">CURRENCIES</string>
-
+    <string name="btn_close">Close</string>
+    <string name="btn_ok">OK</string>
     <string name="price_input">Price</string>
     <string name="quantity_input">Quantity</string>
-    <string name="price_for_label">Price specified for:</string>
-    <string name="count">Count</string>
-
-    <!-- Sections / dialogs -->
-    <string name="section_current">Current</string>
-    <string name="section_recent">Recent</string>
-    <string name="section_selected">Selected</string>
-    <string name="section_favorites">Favorites</string>
-    <string name="section_others">Others</string>
-    <string name="title_base_currency">Base currency</string>
-    <string name="title_secondary_currencies">Conversion currencies (min. 1, max. 5)</string>
-    <string name="btn_ok">OK</string>
-    <string name="btn_close">Close</string>
-    <string name="warn_need_at_least_one">You need to select at least one currency</string>
-
-    <!-- Errors -->
-    <string name="err_load_currencies">Failed to load currencies</string>
-    <string name="err_fetch_rates">Failed to fetch rates for %1$s</string>
-    <string name="dash_price">Price for —: —</string>
-    <string name="dash">—</string>
-
-    <!-- Hints -->
-    <string name="hint_amount_for_price_volume">how many ml/L the price is for</string>
-    <string name="hint_amount_for_price_weight">how many g/kg the price is for</string>
-    <string name="hint_qty_pieces">Number of items</string>
-    <string name="hint_qty_l">Volume, L</string>
-    <string name="hint_qty_ml">Volume, ml</string>
+    <string name="count">Number</string>
+    <string name="price_for_label">Price is for:</string>
+    <string name="hint_amount_for_price_weight">how many g/kg are in the price</string>
+    <string name="hint_amount_for_price_volume">how many ml/l are in the price</string>
+    <string name="hint_qty_pieces">Number of units</string>
     <string name="hint_qty_kg">Weight, kg</string>
     <string name="hint_qty_g">Weight, g</string>
-
-    <!-- Piece mode -->
-    <string name="piece_price">Price per item: %1$.2f %2$s</string>
-    <string name="piece_count">Items: %1$d</string>
-    <string name="converted_per_piece_title">Converted price per item:</string>
+    <string name="hint_qty_l">Volume, l</string>
+    <string name="hint_qty_ml">Volume, ml</string>
+    <string name="title_base_currency">Base currency</string>
+    <string name="title_secondary_currencies_fmt">Currencies to convert (min. %1$d, max. %2$d)</string>
+    <string name="warn_max_currencies">You can select up to %1$d currencies.</string>
+    <string name="section_current">Current</string>
+    <string name="section_selected">Selected</string>
+    <string name="section_recent">Recent</string>
+    <string name="section_others">Others</string>
+    <string name="err_load_currencies">Failed to load currency list</string>
+    <string name="err_fetch_rates">Failed to fetch rates for %1$s</string>
+    <string name="warn_need_at_least_one">You must select at least one currency</string>
+    <string name="piece_price">Price per unit: %1$.2f %2$s</string>
+    <string name="piece_count">Units count: %1$d</string>
+    <string name="converted_per_piece_title">Converted price per unit:</string>
     <string name="converted_total_title">Converted total price:</string>
-
-    <!-- Weight / volume -->
     <string name="price_for">Price for </string>
     <string name="price_per_any_format">%1$s: %2$.2f %3$s</string>
     <string name="taken_generic">Taken (%1$s): %2$s</string>
     <string name="cost_per_kg_and_100g">Cost per 1 kg / 100 g: %1$.2f / %2$.2f %3$s</string>
-    <string name="cost_per_l_and_100ml">Cost per 1 L / 100 ml: %1$.2f / %2$.2f %3$s</string>
-    <string name="converted_per_kg_title">Converted price per 1 kg:</string>
-    <string name="converted_per_100g_title">Converted price per 100 g:</string>
-    <string name="converted_per_l_title">Converted price per 1 L:</string>
-    <string name="converted_per_100ml_title">Converted price per 100 ml:</string>
-    <string name="converted_total_weight_title">Converted total price:</string>
-    <string name="language_ro">Română</string>
-    <string name="currency_selected">selected</string>
-    <string name="favorite_toggle">favorite toggle</string>
+    <string name="cost_per_l_and_100ml">Cost per 1 l / 100 ml:
+%1$.2f / %2$.2f %3$s</string>
+    <string name="converted_per_kg_title">Converted cost per 1 kg:</string>
+    <string name="converted_per_100g_title">Converted cost per 100 g:</string>
+    <string name="converted_per_l_title">Converted cost per 1 l:</string>
+    <string name="converted_per_100ml_title">Converted cost per 100 ml:</string>
+    <string name="converted_total_weight_title">Converted total cost:</string>
+    <string name="dash_price">Price for —: —</string>
+    <string name="dash">—</string>
     <string name="language_ru">Русский</string>
     <string name="language_uk">Українська</string>
     <string name="language_en">English</string>
-
-    <!-- Units -->
-    <string name="unit_piece">pcs.</string>
+    <string name="language_ro">Română</string>
+    <string name="language_kk">Қазақ</string>
+    <string name="language_uz">O\'zbek</string>
+    <string name="currency_selected">Selected</string>
+    <string name="favorite_toggle">Toggle favorite</string>
+    <string name="unit_piece">pcs</string>
     <string name="unit_kg">kg</string>
     <string name="unit_g">g</string>
     <string name="unit_l">l</string>
     <string name="unit_ml">ml</string>
-
-    <!-- Arrays for spinners -->
     <string-array name="units_main">
         <item>@string/unit_piece</item>
         <item>@string/unit_kg</item>
@@ -75,50 +62,89 @@
         <item>@string/unit_l</item>
         <item>@string/unit_ml</item>
     </string-array>
-
     <string-array name="units_mass">
         <item>@string/unit_g</item>
         <item>@string/unit_kg</item>
     </string-array>
-
     <string-array name="units_volume">
         <item>@string/unit_ml</item>
         <item>@string/unit_l</item>
     </string-array>
-
-    <!-- Hints for “price amount” -->
-    <string name="price_amount_hint_volume">how many ml/L the price is for</string>
-    <string name="price_amount_hint_mass">how many g/kg the price is for</string>
-
+    <string name="price_amount_hint_volume">how many ml/l are in the price</string>
+    <string name="price_amount_hint_mass">how many g/kg are in the price</string>
     <string name="tab_converter">Converter</string>
     <string name="tab_compare">Compare</string>
-
-    <string name="compare_weighted">Compare prices of goods by weight</string>
+    <string name="compare_weighted">Comparison of weighted goods prices</string>
     <string name="add_more">Add more</string>
     <string name="compare_price_hint">Price</string>
-    <string name="compare_amount_hint">Quantity</string>
+    <string name="compare_amount_hint">Qty</string>
     <string name="remove">Remove</string>
-
     <string name="compare_need_more">Add at least two items.</string>
-    <string name="compare_mixed_families">You cannot compare weight and volume at the same time. Select the same type of units.</string>
-
+    <string name="compare_mixed_families">Cannot compare weight and volume together. Choose the same unit type.</string>
     <string name="compare_item">Item %1$d</string>
     <string name="compare_by_price">by price</string>
     <string name="compare_by_kg">per 1 kg</string>
     <string name="compare_by_l">per 1 l</string>
-    <string name="compare_amount_hint_example">for ex. 750</string>
-    <string name="compare_amount_hint_g">for ex. 750</string>
-    <string name="compare_amount_hint_kg">for ex. 2.55</string>
-    <string name="compare_amount_hint_ml">for ex. 970</string>
-    <string name="compare_amount_hint_l">for ex. 1.33</string>
-
+    <string name="compare_amount_hint_example">e.g. 750</string>
+    <string name="compare_amount_hint_g">e.g. 750 </string>
+    <string name="compare_amount_hint_kg">e.g. 2.55</string>
+    <string name="compare_amount_hint_ml">e.g. 970</string>
+    <string name="compare_amount_hint_l">e.g. 1.33</string>
     <string name="compare_line_price">%1$d) %2$s — %3$s</string>
     <string name="compare_line_weighted">%1$d) %2$s — %3$s</string>
     <string name="compare_by_weight">Compare by weight/volume</string>
-    <string name="label_price_item_n">Price per item</string>
+    <string name="label_price_item_n">Item price</string>
     <string name="item_label_default">Item</string>
     <string name="item_n">Item %1$d</string>
     <string name="delete">Delete</string>
-    <string name="compare_pair_line">%1$s is cheaper than %2$s by %3$s (%4$s%)</string>
-    <string name="compare_max_items">You can compare a maximum of %1$d items</string>
+    <string name="compare_pair_line">%1$s is cheaper than %2$s by %3$s (%4$s%%)</string>
+    <string name="compare_max_items">You can compare up to %1$d items</string>
+    <string name="scan_hint">Point the camera at the price</string>
+    <string name="scan_price">Scan price</string>
+    <string name="freeze">Freeze</string>
+    <string name="fast_mode">Fast mode</string>
+    <string name="big_price_tag">Big price tag</string>
+    <string name="scan">Scan</string>
+    <string name="fix">Fix</string>
+    <string name="need_scan_first">Tap “Scan”</string>
+    <string name="no_result_yet">No result yet</string>
+    <string name="close">Close</string>
+    <string name="label_price">Price</string>
+    <string name="hint_price">0</string>
+    <string name="label_qty">Quantity</string>
+    <string name="label_price_unit">Price per</string>
+    <string name="label_result">Result</string>
+    <string name="btn_select_currencies">Select currencies</string>
+    <string name="result_hint_piece">1st price — per %1$s, 2nd — per entered quantity.</string>
+    <string name="result_hint_volume">1st price — per %1$s, 2nd — per entered volume.</string>
+    <string name="result_hint_weight">1st price — per %1$s, 2nd — per entered weight.</string>
+    <string name="unit_1">%1$d %2$s</string>
+    <string name="unit_100">%1$d %2$s</string>
+    <string name="section_selected_one">Selected</string>
+    <string name="section_favorites">Favorites</string>
+    <string name="section_all">All list</string>
+    <string name="cd_currency_icon">Currency icon</string>
+    <string name="cd_favorite">Add to favorites</string>
+    <string name="cd_favorite_remove">Remove from favorites</string>
+    <string name="no_results">Nothing found</string>
+    <string name="favorite_added">Added to favorites</string>
+    <string name="favorite_removed">Removed from favorites</string>
+    <string name="compare_better">Better</string>
+    <string name="compare_summary">%1$s is cheaper by %2$s (%3$s%%)</string>
+    <string name="compare_unit_piece_short">pcs</string>
+    <string name="compare_per_kg">per 1 kg</string>
+    <string name="compare_per_l">per 1 l</string>
+    <string name="compare_mode_label">Compare by weight / volume</string>
+    <string name="compare_add_item">Add item</string>
+    <string name="compare_better_default">Best option</string>
+    <string name="compare_item_placeholder">Item</string>
+    <string name="compare_amount_hint_generic">Quantity</string>
+    <string name="cd_remove_item">Remove item</string>
+    <string name="compare_per_piece">per 1 pc</string>
+    <string name="compare_best_only">Item %1$d is better</string>
+    <string name="compare_hint_price">Price</string>
+    <string name="compare_hint_amount">Quantity</string>
+    <string name="compare_best_line">%1$s — better by %2$s %3$s (%4$s%%)\n%5$s</string>
+    <string name="title_secondary_currencies">Currencies to convert (min. 1, max. 20)</string>
+    <string name="choose_secondary_currencies">Currencies to convert</string>
 </resources>
