--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,66 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Rustic Price Convertor</string>
+    <string name="app_name">Rustic Price Converter</string>
     <string name="search_currency">Пошук валюти</string>
     <string name="choose_currencies">ВАЛЮТИ</string>
-
+    <string name="btn_close">Закрити</string>
+    <string name="btn_ok">OK</string>
     <string name="price_input">Ціна</string>
     <string name="quantity_input">Кількість</string>
+    <string name="count">Число</string>
     <string name="price_for_label">Ціна вказана за:</string>
-    <string name="count">Кількість</string>
-
+    <string name="hint_amount_for_price_weight">скільки г/кг вказано в ціні</string>
+    <string name="hint_amount_for_price_volume">скільки мл/л вказано в ціні</string>
+    <string name="hint_qty_pieces">Кількість одиниць</string>
+    <string name="hint_qty_kg">Вага, кг</string>
+    <string name="hint_qty_g">Вага, г</string>
+    <string name="hint_qty_l">Обʼєм, л</string>
+    <string name="hint_qty_ml">Обʼєм, мл</string>
+    <string name="title_base_currency">Основна валюта</string>
+    <string name="title_secondary_currencies_fmt">Валюти для конвертації (мін. %1$d, макс. %2$d)</string>
+    <string name="warn_max_currencies">Можна вибрати максимум %1$d валют.</string>
     <string name="section_current">Поточна</string>
+    <string name="section_selected">Поточні</string>
     <string name="section_recent">Останні</string>
-    <string name="section_selected">Вибрані</string>
-    <string name="section_favorites">Обрані</string>
     <string name="section_others">Інші</string>
-    <string name="title_base_currency">Базова валюта</string>
-    <string name="title_secondary_currencies">Валюти для конвертації (мін. 1, макс. 5)</string>
-    <string name="btn_ok">OK</string>
-    <string name="btn_close">Закрити</string>
-    <string name="warn_need_at_least_one">Потрібно вибрати щонайменше одну валюту</string>
-
     <string name="err_load_currencies">Не вдалося завантажити список валют</string>
     <string name="err_fetch_rates">Не вдалося отримати курси для %1$s</string>
-    <string name="dash_price">Ціна за —: —</string>
-    <string name="dash">—</string>
-
-    <string name="hint_amount_for_price_volume">за скільки мл/л вказано ціну</string>
-    <string name="hint_amount_for_price_weight">за скільки г/кг вказано ціну</string>
-    <string name="hint_qty_pieces">Кількість штук</string>
-    <string name="hint_qty_l">Об’єм, л</string>
-    <string name="hint_qty_ml">Об’єм, мл</string>
-    <string name="hint_qty_kg">Маса, кг</string>
-    <string name="hint_qty_g">Маса, г</string>
-
-    <string name="piece_price">Ціна за штуку: %1$.2f %2$s</string>
-    <string name="piece_count">Кількість штук: %1$d</string>
-    <string name="converted_per_piece_title">Сконвертована вартість за штуку:</string>
-    <string name="converted_total_title">Сконвертована підсумкова вартість:</string>
-
+    <string name="warn_need_at_least_one">Потрібно вибрати хоча б одну валюту</string>
+    <string name="piece_price">Ціна за одиницю: %1$.2f %2$s</string>
+    <string name="piece_count">Кількість одиниць: %1$d</string>
+    <string name="converted_per_piece_title">Конвертована вартість за одиницю:</string>
+    <string name="converted_total_title">Конвертована підсумкова вартість:</string>
     <string name="price_for">Ціна за </string>
     <string name="price_per_any_format">%1$s: %2$.2f %3$s</string>
     <string name="taken_generic">Взято (%1$s): %2$s</string>
     <string name="cost_per_kg_and_100g">Вартість за 1 кг / 100 г: %1$.2f / %2$.2f %3$s</string>
-    <string name="cost_per_l_and_100ml">Вартість за 1 л / 100 мл: %1$.2f / %2$.2f %3$s</string>
-    <string name="converted_per_kg_title">Сконвертована вартість за 1 кг:</string>
-    <string name="converted_per_100g_title">Сконвертована вартість за 100 г:</string>
-    <string name="converted_per_l_title">Сконвертована вартість за 1 л:</string>
-    <string name="converted_per_100ml_title">Сконвертована вартість за 100 мл:</string>
-    <string name="converted_total_weight_title">Сконвертована підсумкова вартість:</string>
-    <string name="language_ro">Română</string>
-    <string name="currency_selected">selected</string>
-    <string name="favorite_toggle">favorite toggle</string>
+    <string name="cost_per_l_and_100ml">Вартість за 1 л / 100 мл:
+%1$.2f / %2$.2f %3$s</string>
+    <string name="converted_per_kg_title">Конвертована вартість за 1 кг:</string>
+    <string name="converted_per_100g_title">Конвертована вартість за 100 г:</string>
+    <string name="converted_per_l_title">Конвертована вартість за 1 л:</string>
+    <string name="converted_per_100ml_title">Конвертована вартість за 100 мл:</string>
+    <string name="converted_total_weight_title">Конвертована підсумкова вартість:</string>
+    <string name="dash_price">Ціна за —: —</string>
+    <string name="dash">—</string>
     <string name="language_ru">Русский</string>
     <string name="language_uk">Українська</string>
     <string name="language_en">English</string>
-
-    <string name="unit_piece">шт.</string>
+    <string name="language_ro">Română</string>
+    <string name="language_kk">Қазақ</string>
+    <string name="language_uz">O\'zbek</string>
+    <string name="currency_selected">Обрані</string>
+    <string name="favorite_toggle">Перемикання обраного</string>
+    <string name="unit_piece">од.</string>
     <string name="unit_kg">кг</string>
     <string name="unit_g">г</string>
     <string name="unit_l">л</string>
     <string name="unit_ml">мл</string>
-
     <string-array name="units_main">
         <item>@string/unit_piece</item>
         <item>@string/unit_kg</item>
@@ -68,50 +62,89 @@
         <item>@string/unit_l</item>
         <item>@string/unit_ml</item>
     </string-array>
-
     <string-array name="units_mass">
         <item>@string/unit_g</item>
         <item>@string/unit_kg</item>
     </string-array>
-
     <string-array name="units_volume">
         <item>@string/unit_ml</item>
         <item>@string/unit_l</item>
     </string-array>
-
-    <string name="price_amount_hint_volume">скільки мл/л зазначено в ціні</string>
-    <string name="price_amount_hint_mass">скільки г/кг зазначено в ціні</string>
-
+    <string name="price_amount_hint_volume">скільки мл/л вказано в ціні</string>
+    <string name="price_amount_hint_mass">скільки г/кг вказано в ціні</string>
     <string name="tab_converter">Конвертер</string>
     <string name="tab_compare">Порівняти</string>
-
     <string name="compare_weighted">Порівняння цін товарів на вагу</string>
     <string name="add_more">Додати ще</string>
     <string name="compare_price_hint">Ціна</string>
-    <string name="compare_amount_hint">Кількість</string>
+    <string name="compare_amount_hint">К-сть</string>
     <string name="remove">Видалити</string>
-
     <string name="compare_need_more">Додайте мінімум два товари.</string>
-    <string name="compare_mixed_families">Не можна порівняти вагу і об\'єм одночасно. Виберіть однаковий тип одиниць.</string>
-
+    <string name="compare_mixed_families">Не можна порівнювати вагу й обʼєм одночасно. Виберіть однаковий тип одиниць.</string>
     <string name="compare_item">Товар %1$d</string>
     <string name="compare_by_price">за ціною</string>
     <string name="compare_by_kg">за 1 кг</string>
     <string name="compare_by_l">за 1 л</string>
-    <string name="compare_amount_hint_example">напр. 750</string>
-    <string name="compare_amount_hint_g">напр. 750</string>
-    <string name="compare_amount_hint_kg">напр. 2,55</string>
-    <string name="compare_amount_hint_ml">напр. 970</string>
-    <string name="compare_amount_hint_l">напр. 1,33</string>
-
+    <string name="compare_amount_hint_example">Напр. 750</string>
+    <string name="compare_amount_hint_g">Напр. 750 </string>
+    <string name="compare_amount_hint_kg">Напр. 2.55</string>
+    <string name="compare_amount_hint_ml">Напр. 970</string>
+    <string name="compare_amount_hint_l">Напр. 1.33</string>
     <string name="compare_line_price">%1$d) %2$s — %3$s</string>
     <string name="compare_line_weighted">%1$d) %2$s — %3$s</string>
-
-    <string name="compare_by_weight">Порівняння за вагою/об\'ємом</string>
+    <string name="compare_by_weight">Порівняння за вагою/обʼємом</string>
     <string name="label_price_item_n">Ціна за товар</string>
     <string name="item_label_default">Товар</string>
     <string name="item_n">Товар %1$d</string>
     <string name="delete">Видалити</string>
     <string name="compare_pair_line">%1$s дешевше, ніж %2$s на %3$s (%4$s%%)</string>
-    <string name="compare_max_items">Можна порівняти максимум %1$d товару</string>
+    <string name="compare_max_items">Можна порівняти максимум %1$d товар</string>
+    <string name="scan_hint">Наведи камеру на ціну</string>
+    <string name="scan_price">Сканувати ціну</string>
+    <string name="freeze">Зафіксувати</string>
+    <string name="fast_mode">Швидкий режим</string>
+    <string name="big_price_tag">Великий цінник</string>
+    <string name="scan">Сканувати</string>
+    <string name="fix">Зафіксувати</string>
+    <string name="need_scan_first">Натисни “Сканувати”</string>
+    <string name="no_result_yet">Поки що немає результату</string>
+    <string name="close">Закрити</string>
+    <string name="label_price">Ціна</string>
+    <string name="hint_price">0</string>
+    <string name="label_qty">Кількість</string>
+    <string name="label_price_unit">Ціна за</string>
+    <string name="label_result">Підсумок</string>
+    <string name="btn_select_currencies">Вибрати валюти</string>
+    <string name="result_hint_piece">1-а ціна — за %1$s, 2-а — за введену кількість.</string>
+    <string name="result_hint_volume">1-а ціна — за %1$s, 2-а — за введений обʼєм.</string>
+    <string name="result_hint_weight">1-а ціна — за %1$s, 2-а — за введену вагу.</string>
+    <string name="unit_1">%1$d %2$s</string>
+    <string name="unit_100">%1$d %2$s</string>
+    <string name="section_selected_one">Вибрана</string>
+    <string name="section_favorites">Обране</string>
+    <string name="section_all">Загальний список</string>
+    <string name="cd_currency_icon">Іконка валюти</string>
+    <string name="cd_favorite">Додати в обране</string>
+    <string name="cd_favorite_remove">Прибрати з обраного</string>
+    <string name="no_results">Нічого не знайдено</string>
+    <string name="favorite_added">Додано в обране</string>
+    <string name="favorite_removed">Видалено з обраного</string>
+    <string name="compare_better">Вигідніше</string>
+    <string name="compare_summary">%1$s дешевше на %2$s (%3$s%%)</string>
+    <string name="compare_unit_piece_short">од.</string>
+    <string name="compare_per_kg">за 1 кг</string>
+    <string name="compare_per_l">за 1 л</string>
+    <string name="compare_mode_label">Порівнювати за вагою / обʼємом</string>
+    <string name="compare_add_item">Додати товар</string>
+    <string name="compare_better_default">Найкращий варіант</string>
+    <string name="compare_item_placeholder">Товар</string>
+    <string name="compare_amount_hint_generic">Кількість</string>
+    <string name="cd_remove_item">Видалити товар</string>
+    <string name="compare_per_piece">за 1 шт</string>
+    <string name="compare_best_only">Товар %1$d вигідніший</string>
+    <string name="compare_hint_price">Ціна</string>
+    <string name="compare_hint_amount">Кількість</string>
+    <string name="compare_best_line">%1$s — вигідніше на %2$s %3$s (%4$s%%)\n%5$s</string>
+    <string name="title_secondary_currencies">Валюти для конвертації (мін. 1, макс. 20)</string>
+    <string name="choose_secondary_currencies">Валюти для конвертації</string>
 </resources>
