--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -53,7 +53,7 @@
     <string name="compare_max_items">Poți compara maximum %1$d produse</string>
     <string name="scan_price">Scanează prețul</string>
     <string name="fast_mode">Mod rapid</string>
-    <string name="big_price_tag">Etichetă mare de preț</string>
+    <string name="big_price_tag">Preț mare</string>
     <string name="scan">Scanează</string>
     <string name="close">Închide</string>
     <string name="label_price">Preț</string>
