--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -53,7 +53,7 @@
     <string name="compare_max_items">Можна порівняти максимум %1$d товар</string>
     <string name="scan_price">Сканувати ціну</string>
     <string name="fast_mode">Швидкий режим</string>
-    <string name="big_price_tag">Великий цінник</string>
+    <string name="big_price_tag">Велика ціна</string>
     <string name="scan">Сканувати</string>
     <string name="close">Закрити</string>
     <string name="label_price">Ціна</string>
